Update MetaData.java
Updated the depreciated version of Integer